--- a/client/index.html
+++ b/client/index.html
@@ -8,6 +8,27 @@
   </head>
   <body>
     <div id="app">
+      <nav class="navbar shadow-lg flex justify-between">
+        <div class="flex-none">
+          <span class="text-lg">BSale <span class="hidden sm:inline-block">Test</span></span>
+        </div>
+        <div class="flex space-x-1">
+          <button class="btn btn-ghost">
+            <svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6" fill="none" viewBox="0 0 24 24" stroke="currentColor">
+              <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M21 21l-6-6m2-5a7 7 0 11-14 0 7 7 0 0114 0z" />
+            </svg>
+          </button>
+          <button class="btn btn-ghost">
+            <div class="indicator">
+            <div class="indicator-item badge badge-secondary hidden"></div>
+            <svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6" fill="none" viewBox="0 0 24 24" stroke="currentColor">
+              <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M3 3h2l.4 2M7 13h10l4-8H5.4M7 13L5.4 5M7 13l-2.293 2.293c-.63.63-.184 1.707.707 1.707H17m0 0a2 2 0 100 4 2 2 0 000-4zm-8 2a2 2 0 11-4 0 2 2 0 014 0z" />
+            </svg>
+            </div>
+          </button>
+        </div>
+      </nav>
+      <div class="container"></div>
     </div>
     <script type="module" src="/main.js"></script>
   </body>
