--- a/client/index.html
+++ b/client/index.html
@@ -8,16 +8,19 @@
   </head>
   <body>
     <div id="app">
-      <nav class="navbar flex justify-between">
+      <nav class="navbar flex justify-between shadow">
         <div class="flex-none">
           <span class="text-lg">BSale <span class="hidden sm:inline-block">Test</span></span>
         </div>
         <div class="flex space-x-1">
-          <button class="btn btn-ghost">
-            <svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6" fill="none" viewBox="0 0 24 24" stroke="currentColor">
-              <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M21 21l-6-6m2-5a7 7 0 11-14 0 7 7 0 0114 0z" />
-            </svg>
-          </button>
+          <div class="relative">
+            <input id="search-input" type="text" placeholder="Search" class="w-full input input-ghost input-sm input-bordered" />
+            <button class="btn btn-ghost absolute top-0 right-0 rounded-l-none btn-sm" id="search-btn">
+              <svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6" fill="none" viewBox="0 0 24 24" stroke="currentColor">
+                <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M21 21l-6-6m2-5a7 7 0 11-14 0 7 7 0 0114 0z" />
+              </svg>
+            </button>
+          </div>
           <button class="btn btn-ghost">
             <div class="indicator">
             <div class="indicator-item badge badge-secondary hidden"></div>
@@ -30,11 +33,11 @@
       </nav>
       <div class="container mt-4">
         <div class="flex">
-        <select id="category-list" class="select select-bordered">
+        <select id="category-list" class="select select-bordered ml-2">
           <option value="all" selected>Categor&iacute;as</option>
         </select> 
         </div>
-        <div class="flex flex-wrap justify-center space-y-2" id="container-products">
+        <div class="mt-3 flex flex-wrap justify-center gap-4" id="container-products">
         </div>
 
       </div>
