--- a/client/index.html
+++ b/client/index.html
@@ -31,13 +31,13 @@
           </button>
         </div>
       </nav>
-      <div class="container mt-4">
+      <div class="container mx-auto mt-4">
         <div class="flex">
         <select id="category-list" class="select select-bordered ml-2">
           <option value="all" selected>Categor&iacute;as</option>
         </select> 
         </div>
-        <div class="mt-3 flex flex-wrap justify-center gap-4" id="container-products">
+        <div class="mt-3 grid grid-cols-1 sm:grid-cols-2 md:grid-cols-3 xl:grid-cols-4 gap-4 mb-4" id="container-products">
         </div>
 
       </div>
