Cart products indicator

--- a/client/index.html
+++ b/client/index.html
@@ -8,7 +8,7 @@
   </head>
   <body>
     <div id="app">
-      <nav class="navbar flex justify-between shadow">
+      <nav class="navbar flex justify-between shadow md:px-3 lg:px-6">
         <div class="flex-none">
           <span class="text-lg">BSale <span class="hidden sm:inline-block">Test</span></span>
         </div>
@@ -23,7 +23,7 @@
           </div>
           <button class="btn btn-ghost">
             <div class="indicator">
-            <div class="indicator-item badge badge-secondary hidden"></div>
+            <div class="indicator-item badge badge-secondary hidden" id="count-indicator"></div>
             <svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6" fill="none" viewBox="0 0 24 24" stroke="currentColor">
               <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M3 3h2l.4 2M7 13h10l4-8H5.4M7 13L5.4 5M7 13l-2.293 2.293c-.63.63-.184 1.707.707 1.707H17m0 0a2 2 0 100 4 2 2 0 000-4zm-8 2a2 2 0 11-4 0 2 2 0 014 0z" />
             </svg>
@@ -32,10 +32,10 @@
         </div>
       </nav>
       <div class="container mx-auto mt-4">
-        <div class="flex">
-        <select id="category-list" class="select select-bordered ml-2">
-          <option value="all" selected>Categor&iacute;as</option>
-        </select> 
+        <div class="flex justify-between">
+          <select id="category-list" class="select select-bordered ml-2">
+            <option value="all" selected>Categor&iacute;as</option>
+          </select> 
         </div>
         <div class="mt-3 grid grid-cols-1 sm:grid-cols-2 md:grid-cols-3 xl:grid-cols-4 gap-4 mb-4" id="container-products">
         </div>
